--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "note-taker",
+  "name": "nasty-note",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app to save and delete notes",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Desean2001/nasty-note.git"
+  },
+  "keywords": [
+    "notes"
+  ],
+  "author": "Desean2001",
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/Desean2001/nasty-note/issues"
+  },
+  "homepage": "https://github.com/Desean2001/nasty-note#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.1"
   }
 }
